tests/module_use_strict/module_use_strict.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Octal literals are not allowed in strict mode.

   3| (01: number);
       ^^



Found 1 error
